[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Brink - BR Cobane Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Brink - BR Cobane Light.otf" type="DynamicFontData" id=2]
[ext_resource path="res://FuelCellGraph.tscn" type="PackedScene" id=3]
[ext_resource path="res://serialData.tscn" type="PackedScene" id=4]
[ext_resource path="res://RPANEL-FuelCell.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=9]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 3 )

[node name="Control" type="Control"]
anchor_right = 0.524
anchor_bottom = 0.724
margin_right = -0.0800781
margin_bottom = 0.0799561
rect_min_size = Vector2( 1006, 810 )
mouse_filter = 2
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1006.0
margin_bottom = 810.0
rect_min_size = Vector2( 0, 810 )
rect_pivot_offset = Vector2( -660, 35 )
mouse_filter = 2
color = Color( 0.94902, 0.94902, 0.94902, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 3.628
margin_left = 60.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = -2158.68
rect_min_size = Vector2( 886, 0 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 886.0
margin_bottom = 720.0
custom_constants/separation = 24

[node name="CarStatus" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 886.0
margin_bottom = 720.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/CarStatus"]
margin_right = 886.0
margin_bottom = 600.0
rect_min_size = Vector2( 886, 0 )
mouse_filter = 2

[node name="FuelCellGraph" parent="MarginContainer/VBoxContainer/CarStatus/MarginContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 886.0
margin_bottom = 600.0
rect_min_size = Vector2( 886, 600 )

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/CarStatus"]
margin_top = 604.0
margin_right = 886.0
margin_bottom = 633.0
theme = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CarStatus"]
margin_top = 637.0
margin_right = 886.0
margin_bottom = 720.0
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 8
custom_constants/separation = 359

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CarStatus/HBoxContainer"]
margin_right = 301.0
margin_bottom = 83.0

[node name="H2RemainingBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CarStatus/HBoxContainer/VBoxContainer"]
margin_right = 301.0
margin_bottom = 25.0

[node name="H2Remaining" type="Label" parent="MarginContainer/VBoxContainer/CarStatus/HBoxContainer/VBoxContainer/H2RemainingBox"]
margin_right = 230.0
margin_bottom = 25.0
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hydrogen Remaining:"

[node name="H2RemainingAmount" type="Label" parent="MarginContainer/VBoxContainer/CarStatus/HBoxContainer/VBoxContainer/H2RemainingBox"]
margin_left = 234.0
margin_right = 280.0
margin_bottom = 25.0
theme = SubResource( 5 )
custom_colors/font_color = Color( 0.105882, 0.760784, 0.713726, 1 )
text = "73%"

[node name="SolenoidTime" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CarStatus/HBoxContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 301.0
margin_bottom = 54.0

[node name="SolenoidTime" type="Label" parent="MarginContainer/VBoxContainer/CarStatus/HBoxContainer/VBoxContainer/SolenoidTime"]
margin_right = 245.0
margin_bottom = 25.0
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Current Solenoid Time:"

[node name="SolenoidTimeSec" type="Label" parent="MarginContainer/VBoxContainer/CarStatus/HBoxContainer/VBoxContainer/SolenoidTime"]
margin_left = 249.0
margin_right = 301.0
margin_bottom = 25.0
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0sec"

[node name="SolenoidTotal" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CarStatus/HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 301.0
margin_bottom = 83.0

[node name="SolenoidTotal" type="Label" parent="MarginContainer/VBoxContainer/CarStatus/HBoxContainer/VBoxContainer/SolenoidTotal"]
margin_right = 187.0
margin_bottom = 25.0
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Soleniod All Time:"

[node name="SolenoidTimeSec" type="Label" parent="MarginContainer/VBoxContainer/CarStatus/HBoxContainer/VBoxContainer/SolenoidTotal"]
margin_left = 191.0
margin_right = 243.0
margin_bottom = 25.0
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0sec"

[node name="MarginContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/CarStatus/HBoxContainer"]
margin_left = 660.0
margin_right = 886.0
margin_bottom = 83.0
rect_min_size = Vector2( 226, 0 )
mouse_filter = 2

[node name="ResetHydrogen" type="Button" parent="MarginContainer/VBoxContainer/CarStatus/HBoxContainer/MarginContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 219.0
margin_bottom = 76.0
mouse_default_cursor_shape = 2
text = "Reset Hydrogen"

[node name="serialData" parent="." instance=ExtResource( 4 )]
mouse_filter = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/CarStatus/HBoxContainer/MarginContainer/ResetHydrogen" to="." method="_on_ResetHydrogen_pressed"]
